--- a/hw/hw5/hw5.ipynb
+++ b/hw/hw5/hw5.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
        "default.payment.next.month      0.00       0.0       0.00        1.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1317,6 +1317,78 @@
    "metadata": {},
    "source": [
     "_Type your answer here, replacing this text._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create X and y for training and test sets\n",
+    "X_train = train_df.drop(columns=[\"default.payment.next.month\"])\n",
+    "y_train = train_df[[\"default.payment.next.month\"]]\n",
+    "X_test = test_df.drop(columns=[\"default.payment.next.month\"])\n",
+    "y_test = test_df[[\"default.payment.next.month\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separate features based on type\n",
+    "numeric_features = [\n",
+    "    \"LIMIT_BAL\",\n",
+    "    \"AGE\",\n",
+    "    \"BILL_AMT1\",\n",
+    "    \"BILL_AMT2\",\n",
+    "    \"BILL_AMT3\",\n",
+    "    \"BILL_AMT4\",\n",
+    "    \"BILL_AMT5\",\n",
+    "    \"BILL_AMT6\"\n",
+    "]\n",
+    "categorical_features = [\"MARRIAGE\"]\n",
+    "ordinal_features = [\n",
+    "    \"PAY_0\",\n",
+    "    \"PAY_2\",\n",
+    "    \"PAY_3\",\n",
+    "    \"PAY_4\",\n",
+    "    \"PAY_5\",\n",
+    "    \"PAY_6\",\n",
+    "    \"EDUCATION\"\n",
+    "]\n",
+    "binary_features = [\"SEX\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create transformers\n",
+    "# Adapted from Homework 3\n",
+    "numeric_transformer = StandardScaler()\n",
+    "categorical_transformer = OneHotEncoder()\n",
+    "pay_ordering = [\"-2\", \"-1\", \"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
+    "education_ordering = [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\"]\n",
+    "ordinal_transformer = OrdinalEncoder(categories=[pay_ordering,\n",
+    "                                                 pay_ordering,\n",
+    "                                                 pay_ordering,\n",
+    "                                                 pay_ordering,\n",
+    "                                                 pay_ordering,\n",
+    "                                                 pay_ordering, \n",
+    "                                                 education_ordering])\n",
+    "binary_transformer = OneHotEncoder(drop=\"if_binary\")\n",
+    "\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (numeric_transformer, numeric_features),\n",
+    "    (categorical_transformer, categorical_features),\n",
+    "    (ordinal_transformer, ordinal_features),\n",
+    "    (binary_transformer, binary_features)\n",
+    ")"
    ]
   },
   {
@@ -1403,6 +1475,131 @@
    "metadata": {},
    "source": [
     "_Type your answer here, replacing this text._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>mean_train_scores</th>\n",
+       "      <th>mean_cv_scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.121545</td>\n",
+       "      <td>0.118569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.121545</td>\n",
+       "      <td>0.118569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.100</td>\n",
+       "      <td>0.121545</td>\n",
+       "      <td>0.118570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.121545</td>\n",
+       "      <td>0.118580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10.000</td>\n",
+       "      <td>0.121535</td>\n",
+       "      <td>0.118647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>100.000</td>\n",
+       "      <td>0.121423</td>\n",
+       "      <td>0.118743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1000.000</td>\n",
+       "      <td>0.121036</td>\n",
+       "      <td>0.118736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>10000.000</td>\n",
+       "      <td>0.112541</td>\n",
+       "      <td>0.110944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>100000.000</td>\n",
+       "      <td>0.067687</td>\n",
+       "      <td>0.066605</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        alpha  mean_train_scores  mean_cv_scores\n",
+       "0       0.001           0.121545        0.118569\n",
+       "1       0.010           0.121545        0.118569\n",
+       "2       0.100           0.121545        0.118570\n",
+       "3       1.000           0.121545        0.118580\n",
+       "4      10.000           0.121535        0.118647\n",
+       "5     100.000           0.121423        0.118743\n",
+       "6    1000.000           0.121036        0.118736\n",
+       "7   10000.000           0.112541        0.110944\n",
+       "8  100000.000           0.067687        0.066605"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adapted from Lecture 7\n",
+    "scores_dict = {\n",
+    "    \"alpha\": 10.0 ** np.arange(-3, 6, 1),\n",
+    "    \"mean_train_scores\": list(),\n",
+    "    \"mean_cv_scores\": list(),\n",
+    "}\n",
+    "for alpha in scores_dict[\"alpha\"]:\n",
+    "    pipe_ridge = make_pipeline(preprocessor, Ridge(alpha=alpha))\n",
+    "    scores = cross_validate(pipe_ridge, X_train, y_train, return_train_score=True)\n",
+    "    scores_dict[\"mean_train_scores\"].append(scores[\"train_score\"].mean())\n",
+    "    scores_dict[\"mean_cv_scores\"].append(scores[\"test_score\"].mean())\n",
+    "\n",
+    "results_df = pd.DataFrame(scores_dict)\n",
+    "results_df"
    ]
   },
   {
