--- a/hw/hw5/hw5.ipynb
+++ b/hw/hw5/hw5.ipynb
@@ -1876,7 +1876,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model would be clearly overfit to the training data as the train score is very high but in the case of RFC, this does not necessarily equal overfitting.  The validation score is much better than the linear model (15% increase) but the model also takes more time to fit and score."
+    "The model would be clearly overfit to the training data as the train score is very high but in the case of RFC, this does not necessarily equal overfitting.  The f1 validation score is much better than the linear model (15% increase) but the model also takes more time to fit and score."
    ]
   },
   {
@@ -2165,7 +2165,132 @@
     "plt.xlabel(\"number of trees\")\n",
     "plt.title(\"Number of Estimators Hyperparameter vs CV and Train Scores\")\n",
     "plt.ylabel(\"f1 scores\") \n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_trees</th>\n",
+       "      <th>train_f1_score</th>\n",
+       "      <th>cv_f1_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.774127</td>\n",
+       "      <td>0.395832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.933518</td>\n",
+       "      <td>0.441141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.951507</td>\n",
+       "      <td>0.432391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>25</td>\n",
+       "      <td>0.991411</td>\n",
+       "      <td>0.469984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50</td>\n",
+       "      <td>0.997474</td>\n",
+       "      <td>0.472101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>100</td>\n",
+       "      <td>0.998980</td>\n",
+       "      <td>0.475807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>200</td>\n",
+       "      <td>0.999034</td>\n",
+       "      <td>0.476693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>500</td>\n",
+       "      <td>0.999034</td>\n",
+       "      <td>0.476193</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   num_trees  train_f1_score  cv_f1_score\n",
+       "0          1        0.774127     0.395832\n",
+       "1          5        0.933518     0.441141\n",
+       "2         10        0.951507     0.432391\n",
+       "3         25        0.991411     0.469984\n",
+       "4         50        0.997474     0.472101\n",
+       "5        100        0.998980     0.475807\n",
+       "6        200        0.999034     0.476693\n",
+       "7        500        0.999034     0.476193"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "results_df = pd.DataFrame({\n",
+    "    'num_trees': num_trees,\n",
+    "    'train_f1_score': train_scores,\n",
+    "    'cv_f1_score': test_scores\n",
+    "})\n",
+    "\n",
+    "display(results_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that we achieve the highest validation f1 score of 0.4767 at 200 trees. Perhaps we could increase valalidation f1 score by further increasing the number of trees, but the f1 score increase does not seem worth it compared to the runtime increase. So 200 trees is our optimized hyperparameter value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimizing the SVC Classifier"
    ]
   },
   {
@@ -2201,15 +2326,29 @@
     "    \"svc__C\": [0.001, 0.01, 0.1, 1.0, 10, 100],\n",
     "}\n",
     "rs = RandomizedSearchCV(pipe, param_distributions=param_grid, n_jobs=-1, n_iter=8, return_train_score=True, random_state=123, scoring='f1')\n",
-    "rs.fit(X_train, y_train)\n",
+    "rs.fit(X_train, y_train_ravel)\n",
     "print(\"Best Score: \" + str(rs.best_score_))\n",
     "print(\"Best Gamma: \" + str(rs.best_params_[\"svc__gamma\"]))\n",
     "print(\"Best C: \" + str(rs.best_params_[\"svc__C\"]))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get the best validation f1-score of 0.4558 with a gamma of 0.01 and C of 100. However, this does not beat the optimized Random Forest Classifier f1-scores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimizing the KNN Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2317,6 +2456,97 @@
        "      <td>0.018880</td>\n",
        "      <td>0.007853</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.214499</td>\n",
+       "      <td>0.152447</td>\n",
+       "      <td>0.017156</td>\n",
+       "      <td>0.008403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.261428</td>\n",
+       "      <td>0.189378</td>\n",
+       "      <td>0.019888</td>\n",
+       "      <td>0.007110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.197698</td>\n",
+       "      <td>0.145330</td>\n",
+       "      <td>0.016967</td>\n",
+       "      <td>0.007550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.239034</td>\n",
+       "      <td>0.176830</td>\n",
+       "      <td>0.014585</td>\n",
+       "      <td>0.006798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.185792</td>\n",
+       "      <td>0.144189</td>\n",
+       "      <td>0.019070</td>\n",
+       "      <td>0.008726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.226007</td>\n",
+       "      <td>0.175198</td>\n",
+       "      <td>0.018606</td>\n",
+       "      <td>0.007455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0.176381</td>\n",
+       "      <td>0.142494</td>\n",
+       "      <td>0.015701</td>\n",
+       "      <td>0.006774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.212272</td>\n",
+       "      <td>0.171811</td>\n",
+       "      <td>0.012458</td>\n",
+       "      <td>0.008976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0.171491</td>\n",
+       "      <td>0.135682</td>\n",
+       "      <td>0.008521</td>\n",
+       "      <td>0.011261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>0.198617</td>\n",
+       "      <td>0.163573</td>\n",
+       "      <td>0.011342</td>\n",
+       "      <td>0.010003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0.165306</td>\n",
+       "      <td>0.130513</td>\n",
+       "      <td>0.004612</td>\n",
+       "      <td>0.009046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>0.188441</td>\n",
+       "      <td>0.157732</td>\n",
+       "      <td>0.007573</td>\n",
+       "      <td>0.008292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>0.158935</td>\n",
+       "      <td>0.129719</td>\n",
+       "      <td>0.012405</td>\n",
+       "      <td>0.010560</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2333,10 +2563,23 @@
        "8                    0.251227       0.161261      0.015035         0.004676\n",
        "9                    0.318722       0.208612      0.016322         0.007033\n",
        "10                   0.231247       0.155508      0.016348         0.008169\n",
-       "11                   0.284746       0.198640      0.018880         0.007853"
+       "11                   0.284746       0.198640      0.018880         0.007853\n",
+       "12                   0.214499       0.152447      0.017156         0.008403\n",
+       "13                   0.261428       0.189378      0.019888         0.007110\n",
+       "14                   0.197698       0.145330      0.016967         0.007550\n",
+       "15                   0.239034       0.176830      0.014585         0.006798\n",
+       "16                   0.185792       0.144189      0.019070         0.008726\n",
+       "17                   0.226007       0.175198      0.018606         0.007455\n",
+       "18                   0.176381       0.142494      0.015701         0.006774\n",
+       "19                   0.212272       0.171811      0.012458         0.008976\n",
+       "20                   0.171491       0.135682      0.008521         0.011261\n",
+       "21                   0.198617       0.163573      0.011342         0.010003\n",
+       "22                   0.165306       0.130513      0.004612         0.009046\n",
+       "23                   0.188441       0.157732      0.007573         0.008292\n",
+       "24                   0.158935       0.129719      0.012405         0.010560"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2350,7 +2593,7 @@
     "    \"std_cv_score\": [],\n",
     "    \"std_train_score\": [],\n",
     "}\n",
-    "param_grid = {\"n_neighbors\": np.arange(2, 12, 1)}\n",
+    "param_grid = {\"n_neighbors\": np.arange(2, 25, 1)}\n",
     "\n",
     "for k in param_grid[\"n_neighbors\"]:\n",
     "    knn = KNeighborsClassifier(n_neighbors=k)\n",
@@ -2365,6 +2608,13 @@
     "results_df = pd.DataFrame(results_dict)\n",
     "results_df = results_df.set_index(\"n_neighbors\")\n",
     "results_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get the best validation f1-score at 3 neighbors. However, this score i"
    ]
   },
   {
@@ -2419,7 +2669,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "Our best performing model was the Random Forest Classifier with n_estimators = 200."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "  No default     0.8407    0.9398    0.8875      7023\n",
+      "     Default     0.6319    0.3672    0.4645      1977\n",
+      "\n",
+      "    accuracy                         0.8140      9000\n",
+      "   macro avg     0.7363    0.6535    0.6760      9000\n",
+      "weighted avg     0.7948    0.8140    0.7945      9000\n",
+      "\n",
+      "Test Accuracy: 0.814\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predicting with the RFC on the tree\n",
+    "\n",
+    "forest_classifier = make_pipeline(preprocessor, RandomForestClassifier(n_estimators=200))\n",
+    "forest_classifier.fit(X_train, y_train_ravel)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create classification report (code from lecture 9)\n",
+    "print(\n",
+    "    classification_report(\n",
+    "        y_test, forest_classifier.predict(X_test), target_names=[\"No default\", \"Default\"], digits=4, zero_division=0\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# evaluate accuracy\n",
+    "pred = forest_classifier.predict(X_test)\n",
+    "print(f\"Test Accuracy: {accuracy_score(y_test,pred)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that we get a f1 score of 0.4645, which is roughly in line with what we got while optimizing the n_estimator hyperparameter. This, alongside the f1-scores increasing about as we would expect while increasing n_estimators, suggests the we did not have major issues with optimization bias. With our test data in line with what we expected, we can trust our test results to be able to generalize to unseen data."
    ]
   },
   {
